--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -7,6 +7,7 @@ import BlueText from "../../components/BlueText.astro"
 import InlineEquation from "../../components/InlineEquation.astro" 
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 import Warning from "../../components/Warning.astro"
+import Example from "../../components/Example.astro"
 ---
 <Layout title="Hydrostatic Fluid Pressure">
 
@@ -45,16 +46,33 @@ For an incompressible fluid (density <InlineEquation equation='\\rho' />) at res
 
 <Warning title="Make sure you don't confuse pressure with force!" id="force-pressure">
     <p>
-      Pressure is a force distributed over an area (Force per area) and therefore has units of Pascals (Pa). To calculate the resultant force from hydrostatic fluid pressure, you must use  
+      Pressure is a force distributed over an area (force per area) and therefore has units of Pascals (Pa). To calculate the resultant force from hydrostatic fluid pressure, you must use  
     </p>
 
-	<DisplayEquation equation="F = P*A"/>
+	<DisplayEquation equation="F_R = P*A"/>
 
 	<p> Where <InlineEquation equation=" A " /> is the area that the force is applied over. 
 	<p>	
 	
 </Warning>
 		
+</SubSection>
+
+<SubSection title="Pressure, Distributed Loads, and Free Body Diagrams" id="fluid_pressure_FBD">
+
+Hydrostatic fluid pessure is a type of distributed load. If you need a refresher on distributed loads, see the <a href="https://www.mechref.org/sta/force_systems/?origin=sidebar#distributed_loads">Distributed Loads Reference Page</a>. 
+
+</SubSection>
+
+<SubSection title="Fluid Pressure with Slanted and Curved Surfaces" id="fluid_pressure_FBD">
+
+We will often be required to analyze the hdrostatic fluid pressure on surfaces that are not perfectly horizontal or vertical. 
+
+
+<Example title="Resultant force on a curved plate"  id="fluid-curved">
+
+</Example>
+
 </SubSection>
 
 <SubSection title="Buoyancy" id="buoyancy">
