--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -60,13 +60,15 @@ For an incompressible fluid (density <InlineEquation equation='\\rho' />) at res
 
 <SubSection title="Pressure, Distributed Loads, and Free Body Diagrams" id="fluid_pressure_FBD">
 
-Hydrostatic fluid pessure is a type of distributed load. If you need a refresher on distributed loads, see the <a href="https://www.mechref.org/sta/force_systems/?origin=sidebar#distributed_loads">Distributed Loads Reference Page</a>. 
+<p> Hydrostatic fluid pessure is a type of distributed load. If you need a refresher on distributed loads, see the <a href="https://www.mechref.org/sta/force_systems/?origin=sidebar#distributed_loads">Distributed Loads Reference Page</a>. 
+</p> 
 
 </SubSection>
 
 <SubSection title="Fluid Pressure with Slanted and Curved Surfaces" id="fluid_pressure_FBD">
 
-We will often be required to analyze the hdrostatic fluid pressure on surfaces that are not perfectly horizontal or vertical. 
+<p> We will often be required to analyze the hdrostatic fluid pressure on surfaces that are not perfectly horizontal or vertical. In these cases, it is often easier to redraw our system and create articifial horizontal and vertical "surfaces" 
+</p>
 
 
 <Example title="Resultant force on a curved plate"  id="fluid-curved">
