--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -76,7 +76,7 @@ For an incompressible fluid (density <InlineEquation equation='\\rho' />) at res
 
 <p> Using this method, we can solve for the resultant force by calculating the total horizontal forces (<InlineEquation equation=" F_H " />) and vertical forces (<InlineEquation equation=" F_V " />) and relating them using </p>
 
-<DisplayEquation equation="F_R = \\sqrt{{F_H}^2+{F_V}^2}" title="Resultant force from fluid pressure"   id="res-force">
+<DisplayEquation equation="F_R = \\sqrt{{F_H}^2+{F_V}^2}" title="Resultant force from fluid pressure" background="True" id="res-force">
 </DisplayEquation>
 
 <Example title="Resultant force on a curved plate"  id="fluid-curved">
