--- a/src/pages/sol/failure_theories.astro
+++ b/src/pages/sol/failure_theories.astro
@@ -123,7 +123,7 @@ Failure of a material depends on (1) nature of loading and (2) type of material.
 <SubSubSection id="failure-surfaces" title="Interactive 3D Failure Surfaces">
 
 <p>
-    The following figure shows the failure surfaces of <BlueText>Tresca</BlueText> and <RedText>von Mises</RedText> criteria in term of the principal stresses in 3 dimensions. 
+    The following figure shows the failure surfaces of <span style="color: blue;">Tresca</span> and <span style="color: red;">von Mises</span> criteria in term of the principal stresses in 3 dimensions. 
     The 2D figure above can be found cenered around the origin in this plot. 
     The shape of the 2D failure surface <InlineEquation equation="(\\sigma_1,\\sigma_2)"/> remains the same, but moves location depending on <InlineEquation equation="\\sigma_3"/>.
     Just like in 2D, regions <strong>outside</strong> the surfaces are considered to have failed. 
