--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -64,6 +64,8 @@ For an incompressible fluid (density <InlineEquation equation='\\rho' />) at res
 <p> Hydrostatic fluid pessure is a type of distributed load. If you need a refresher on distributed loads, see the <a href="https://www.mechref.org/sta/force_systems/?origin=sidebar#distributed_loads">Distributed Loads Reference Page</a>. 
 </p> 
 
+<Image src='/Statics/FluidFigures/FluidPlateExample.PNG' width='4'>
+
 <p>
 Given a plate submerged in water, we can choose to draw the FBD of the plate in 2D or 3D:
 </p>
@@ -72,9 +74,13 @@ Given a plate submerged in water, we can choose to draw the FBD of the plate in 
 In 3D, the value for <InlineEquation equation=" w " />, the distributed load on the plate from the fluid, is just the pressure <InlineEquation equation=" P " /> at depth <InlineEquation equation=" h " />. To solve for the resultant force from the distributed load we multiply by the area of the plate. 
 </p>
 
+<Image src='/Statics/FluidFigures/Fluid3DPlate.PNG' width='4'>
+
 <p>
 In 2D, the the value for <InlineEquation equation=" w " />, the distributed load on the plate from the fluid, is the pressure <InlineEquation equation=" P " /> at depth <InlineEquation equation=" h " /> <strong> multiplied by the plate depth <InlineEquation equation=" b " />. </strong> To solve for the resultant force from the distributed load we multiply by the length of the plate.
 </p>
+
+<Image src='/Statics/FluidFigures/Fluid2DPlate.PNG' width='4'>
 
 </SubSection>
 
