--- a/src/pages/about/examples/example.astro
+++ b/src/pages/about/examples/example.astro
@@ -1,20 +1,18 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import Section from "../../components/Section.astro";
-import SubSection from "../../components/SubSection.astro";
-import SubSubSection from "../../components/SubSubSection.astro";
-import SubSubSubSection from "../../components/SubSubSubSection.astro";
-import CalloutContainer from "../../components/CalloutContainer.astro";
-import CalloutCard from "../../components/CalloutCard.astro";
-import InlineEquation from "../../components/InlineEquation.astro";
-import DisplayEquation from "../../components/DisplayEquation.astro";
-import DisplayTable from "../../components/DisplayTable.astro";
-import Warning from "../../components/Warning.astro";
+import Layout from "../../../layouts/Layout.astro";
+import Section from "../../../components/Section.astro";
+import SubSection from "../../../components/SubSection.astro";
+import SubSubSection from "../../../components/SubSubSection.astro";
+import SubSubSubSection from "../../../components/SubSubSubSection.astro";
+import CalloutContainer from "../../../components/CalloutContainer.astro";
+import CalloutCard from "../../../components/CalloutCard.astro";
+import InlineEquation from "../../../components/InlineEquation.astro";
+import DisplayEquation from "../../../components/DisplayEquation.astro";
+import DisplayTable from "../../../components/DisplayTable.astro";
+import Warning from "../../../components/Warning.astro";
 ---
 
 <Layout title="Mechref Example Skeleton">
-    
-    
     <Section id="main-section" title="Main section">
         <p>
             Use this page to get familiar with the different components Mechref has to offer. Resize the browser window to visualize how the pages look like on different screen sizes (desktop vs. tablet vs. phone).
@@ -29,6 +27,10 @@ import Warning from "../../components/Warning.astro";
         <p>
             These will follow the user as they scroll through the section they are defined in, but will stay contained to their section. Scroll up and down to experience this effect.
         </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vel tortor vestibulum, pretium turpis sit amet, dictum lorem. Morbi porta turpis egestas, semper nulla eget, suscipit nulla. Praesent nibh elit, tempor eget sollicitudin et, ultrices id est. Donec rutrum varius mollis. Donec quis eros a elit molestie aliquam id ac lacus. Aliquam ultrices, mauris dapibus rhoncus iaculis, metus turpis auctor mauris, et accumsan dolor justo dictum felis. Donec porttitor ornare malesuada. Quisque in auctor leo, quis aliquam quam. Nunc maximus eget orci ac tristique. Nunc eu purus eu augue ornare commodo vehicula non est. Mauris a fringilla lectus. Nunc ultricies purus in tortor lacinia ultricies.
+        </p>
+
         <CalloutContainer slot="cards">
             <CalloutCard title="I'm here!">
                 By default, the title is "Did you know?", but can be changed, as illustrated here.
