--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,10 +13,10 @@ import Col from '../components/Col.astro';
 <Layout title="Mechanics Reference">
 
 <Row>
-    <Col values="7">
+    <Col values="12 md-7">
         <Image src='/MainFig.png' class_=""></Image>
     </Col>
-    <Col values="5">
+    <Col values="12 md-5">
         <p>Welcome to the reference pages for some of the courses taught in Mechanical Science and Engineering at the University of Illinois at Urbana-Champaign.</p>
 
         <p>You can navigate directly to a course listed above or learn more about the reference pages including information for students and instructors by clicking on the about page to the right of the top menu bar.</p>
