--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -112,6 +112,9 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 
 <strong>Archimedes' Principle:</strong> Any object that is either partially or totally immersed in a fluid has a buoyancy force equal to the weight of the fluid displaced by the object. 
 
+<DisplayEquation equation="F_B = W_displaced" title="Buoyant Force" background="True" id="buoyant-f">
+</DisplayEquation>
+
 <Image src='/Statics/FluidFigures/Buoyancy.jpg' width='4'>
 
 
