--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -112,7 +112,7 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 
 <strong>Archimedes' Principle:</strong> Any object that is either partially or totally immersed in a fluid has a buoyancy force equal to the weight of the fluid displaced by the object. 
 
-<DisplayEquation equation="F_B = W_displaced" title="Buoyant Force" background="True" id="buoyant-f" derivation="True">
+<DisplayEquation equation="F_B = W_{displaced}" title="Buoyant Force" background="True" id="buoyant-f" derivation="True">
 
    <DisplayEquation equation="\\sum F_x :  \\text{horizontal forces cancel out}"/></DisplayEquation>
 	<DisplayEquation equation="\\begin{aligned}  \\sum F_y :  F_B  &amp;= F_{R_2} - F_{R_1}  \\\\    &amp;= W_2 \\ S  -  W_1 \\ S  \\\\   &amp;=  \\rho \\ g \\ h_2 \\ S^2 -  \\rho \\ g \\ h_1 \\ S^2   \\\\   &amp;=  \\rho \\ g \\ S^2 \\ (h_2  -  h_1)  \\\\ &amp;=  \\rho \\ g \\ S^3   \\\\  F_B  &amp;=  \\rho \\ g \\ V  = m \\ g  \\end{aligned} "/>
