--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -116,7 +116,7 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 <DisplayEquation equation="F_B = W_{displaced}" title="Buoyant Force" background="True" id="buoyant-f" derivation="True">
 
    <DisplayEquation equation="\\sum F_x :  \\text{horizontal forces cancel out}"/></DisplayEquation>
-	<DisplayEquation equation="\\begin{aligned}  \\sum F_y :  F_B  &amp;= F_{R_2} - F_{R_1}  \\\\    &amp;= W_2 \\ S  -  W_1 \\ S  \\\\   &amp;=  \\rho \\ g \\ h_2 \\ S^2 -  \\rho \\ g \\ h_1 \\ S^2   \\\\   &amp;=  \\rho \\ g \\ S^2 \\ (h_2  -  h_1)  \\\\ &amp;=  \\rho \\ g \\ S^3   \\\\  F_B  &amp;=  \\rho \\ g \\ V  = m \\ g  \\end{aligned} "/>
+	<DisplayEquation equation="\\begin{aligned}  \\sum F_y :  F_B  &amp;= F_{R_2} - F_{R_1}  \\\\    &amp;= w_2 \\ S  -  w_1 \\ S  \\\\   &amp;=  \\rho \\ g \\ h_2 \\ S^2 -  \\rho \\ g \\ h_1 \\ S^2   \\\\   &amp;=  \\rho \\ g \\ S^2 \\ (h_2  -  h_1)  \\\\ &amp;=  \\rho \\ g \\ S^3   \\\\  F_B  &amp;=  \\rho \\ g \\ V  = m \\ g  \\end{aligned} "/>
 	</DisplayEquation>
 
 	<p> In which <InlineEquation equation=" F_B " /> is the buoyance force, <InlineEquation equation=" \\rho \\ g \\ V " /> is the volume of the cube, and <InlineEquation equation=" m \\ g " /> is the weight of the cube. </p>
@@ -141,11 +141,12 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
             <p>
                 <Image src='/Statics/FluidFigures/BuoyancyDerivation.jpg' width='4'>
 				
-				
-                <DisplayEquation equation="\\sum F_x :  \\text{horizontal forces cancel out}"/>
+		<p>		
+                <InlineEquation equation=" \\sum F_x :"/> Horizontal forces cancel out.
+		</p>
 				<DisplayEquation equation="\\begin{aligned}  \\sum F_y :  F_B  &amp;= F_{R_2} - F_{R_1}  \\\\    &amp;= W_2 \\ S  -  W_1 \\ S  \\\\   &amp;=  \\rho \\ g \\ h_2 \\ S^2 -  \\rho \\ g \\ h_1 \\ S^2   \\\\   &amp;=  \\rho \\ g \\ S^2 \\ (h_2  -  h_1)  \\\\ &amp;=  \\rho \\ g \\ S^3   \\\\  F_B  &amp;=  \\rho \\ g \\ V  = m \\ g  \\end{aligned} "/>
                 
-				<p> In which <InlineEquation equation=" F_B " /> is the buoyance force, <InlineEquation equation=" \\rho \\ g \\ V " /> is the volume of the cube, and <InlineEquation equation=" m \\ g " /> is the weight of the cube. </p>
+				<p> In which <InlineEquation equation=" F_B " /> is the buoyant force, <InlineEquation equation=" \\rho \\ g \\ V " /> is the volume of the cube, and <InlineEquation equation=" m \\ g " /> is the weight of the cube. </p>
 			 </p>
     </DisplayEquation>
 
