--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -115,7 +115,7 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 
 <DisplayEquation equation="F_B = W_{displaced}" title="Buoyant Force" background="True" id="buoyant-f" derivation="True">
 
-	<Image src='/Statics/FluidFigures/BuoyancyDerivation.jpg' width='4'>
+	<Image src='/Statics/FluidFigures/BuoyancyDerivation.jpg' width='4'> </Image>
 	
 	<p>
    	<DisplayEquation equation="\\sum F_x :  \\text{horizontal forces cancel out}"/>
