--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -110,7 +110,7 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 
 <SubSection title="Buoyancy" id="buoyancy">
 <p>
-<strong>Archimedes' Principle:</strong> Any object that is either partially or totally immersed in a fluid has a buoyancy force <InlineEquation equation=" F_B " /> equal to the weight of the fluid displaced by the object (<InlineEquation equation=" W_{Displaced} " />). 
+<strong>Archimedes' Principle:</strong> Any object that is either partially or totally immersed in a fluid has a buoyant force <InlineEquation equation=" F_B " /> equal to the weight of the fluid displaced by the object (<InlineEquation equation=" W_{Displaced} " />). 
 </p>
 
 <DisplayEquation equation="F_B = W_{displaced}" title="Buoyant Force" background="True" id="buoyant-f" derivation="True">
