--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -118,7 +118,7 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 	<Image src='/Statics/FluidFigures/BuoyancyDerivation.jpg' width='4'> </Image>
 	
 	<p>
-   	<DisplayEquation equation="\\sum F_x :  \\text{horizontal forces cancel out}"/>
+   	<InlineEquation equation="\\sum F_x :"/> horizontal forces cancel out.
 	</p>
 
 	<DisplayEquation equation="\\begin{aligned}  \\sum F_y :  F_B  &amp;= F_{R_2} - F_{R_1}  \\\\    &amp;= w_2 \\ S  -  w_1 \\ S  \\\\   &amp;=  \\rho \\ g \\ h_2 \\ S^2 -  \\rho \\ g \\ h_1 \\ S^2   \\\\   &amp;=  \\rho \\ g \\ S^2 \\ (h_2  -  h_1)  \\\\ &amp;=  \\rho \\ g \\ S^3   \\\\  F_B  &amp;=  \\rho \\ g \\ V  = m \\ g  \\end{aligned} "/>
@@ -131,7 +131,7 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 
 <Example title="Buoyant force of a basketball"  id="basketball">
 	<p> What is the buoyant force on this basketball with radius <InlineEquation equation=" R " />?
-	<Image src='/Statics/FluidFigures/Buoyancy.jpg' width='4'>
+	<Image src='/Statics/FluidFigures/Buoyancy.jpg' width='4'></Image>
 
 	<div slot="solution">
 	<DisplayEquation equation="\\begin{aligned}  F_B &amp;=  W   \\\\   &amp;= m_{water} \\ g \\\\  &amp;= \\rho_{water} \\ V_{displaced} \\ g    \\\\   &amp;= \\rho_{water} (\\frac{4}{3} \\pi R^3) \\ g  \\end{aligned}">
