--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -124,7 +124,7 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 	<DisplayEquation equation="\\begin{aligned}  \\sum F_y :  F_B  &amp;= F_{R_2} - F_{R_1}  \\\\    &amp;= w_2 \\ S  -  w_1 \\ S  \\\\   &amp;=  \\rho \\ g \\ h_2 \\ S^2 -  \\rho \\ g \\ h_1 \\ S^2   \\\\   &amp;=  \\rho \\ g \\ S^2 \\ (h_2  -  h_1)  \\\\ &amp;=  \\rho \\ g \\ S^3   \\\\  F_B  &amp;=  \\rho \\ g \\ V  = m \\ g  \\end{aligned} "/>
 
 	<p> 
-	In which <InlineEquation equation=" F_B " /> is the buoyance force, <InlineEquation equation=" \\rho \\ g \\ V " /> is the volume of the cube, and <InlineEquation equation=" m \\ g " /> is the weight of the volume of water displaced by the cube. 
+	In which <InlineEquation equation=" F_B " /> is the buoyance force and  <InlineEquation equation=" \\rho \\ g \\ V = m \\ g " /> is the weight of the volume of water displaced by the cube. 
 	</p>
 
 </DisplayEquation>
